Bug 155574 - Right-clicking on a file launches it
Summary: Right-clicking on a file launches it
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
: 156546 160480 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-01-12 21:35 UTC by Thibaut Cousin
Modified: 2009-12-02 17:07 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Dolphin crash output (3.99 KB, text/plain)
2008-03-27 19:54 UTC, CJ Fisher
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thibaut Cousin 2008-01-12 21:35:47 UTC
Version:            (using KDE KDE 4.0.0)
Installed from:    SuSE RPMs
OS:                Linux

It's a simple yet horribly annoying bug... I'm using KDE in one-click mode.

When I right-click on a file, I expect a popup menu to show up. Instead, if I right-click on the filename (not the icon), it launches the file as if I had left-clicked AND pops up the menu. 

It's confusing to have two things happening at once, and launching the file when right-clicking is really not what I expect.

Moreover, it has some funny borderline effects when clicking on a folder: the folder is opened (so its icon is no longer displayed), yet the popup menu that appears is about the no-longer-displayed icon.

And last thing: I have preview instead of the icon, so the filename is a bigger targer for clicking that the icon itself. Which means that I hit this bug dozens of times a day.

Even though I can't provide a patch, I'm available to test any patch. Thanks for your attention.
Comment 1 Peter Penz 2008-01-12 21:59:41 UTC
> When I right-click on a file, I expect a popup menu to show up.
> Instead, if I right-click on the filename (not the icon), it
> launches the file as if I had left-clicked AND pops up the menu. 

Sorry, but I cannot reproduce this issue (neither with KDE 4.0.0 from official Suse 10.3 packages nor with custom build 4.0.0 sources).

> And last thing: I have preview instead of the icon, so the filename
> is a bigger targer for clicking that the icon itself. Which means
> that I hit this bug dozens of times a day. 

Please only report one issue per bug-report... I don't understand the issue, could you please explain in more detail what you mean? Thanks!
Comment 2 Thibaut Cousin 2008-01-12 22:09:20 UTC
My last comment was about the same issue, don't worry.

When the icons are replaced by a preview, everything is bigger. Since the filename is also larger, the filename becomes a larger target than the icon itself. It's normal, I'm not criticising that.

I only meant that the probability that I click the filename instead of the icon, and therefore trigger the bug, is higher because of that.

Strange that you can't reproduce that bug... I thought that my configuration was pretty much standard. Can you give me some pointers to track the problem, please?
Comment 3 Peter Penz 2008-01-12 22:13:18 UTC
> Strange that you can't reproduce that bug... I thought that
> my configuration was pretty much standard. Can you give me
> some pointers to track the problem, please? 

Hmm, it's difficult to give some pointers as I never had this problem myself. I've seen that Suse updated some packages shortly after the release, maybe an update might help? But this is just guessing, I really don't know... Sorry!
Comment 4 Todd 2008-01-17 21:28:49 UTC
I have the same problem.  I am using the most up-to-date official opensuse 10.3 packages.  This started simultaneously on two different computers after a package update and has continued after both were updated again.  Further, it happens when using dolphin in both kde 3.5 and kde 4.0.  It is making dolphin very hard to use.
Comment 5 Todd 2008-01-20 18:36:04 UTC
Several updates later and the problem still persists.  I have been poking around and have a few more details regarding the problem as well as everything I can think of that might be causing it.

The bug also happens in the file manager mode in the KDE4 version of konqueror, but doesn't happen in the KDE4 web browser mode or the KDE3 version in any mode.  It also happens in systemsettings when clicking on icons to navigate the settings tree (such as "appearance" or "colors" within appearance) but not when clicking on widgets.  However, this also happens in kcontrol so it may be expected behavior.  It happens in the KDE4 version of gwenview but not the KDE3 version.  So it looks like the problem somehow applies to the dolphin kpart as a whole, and not dolphin alone.  I have a laptop so I tried it with both the integrated laptop touch pad and the external mouse I am using and both cause it, so it is not the mouse.  It happens on middle-click, but this may be expected behavior since I never tried it before and have no systems without the problem with which to compare it.

Changing the double or single-click setting in systemsettings does not appear to have any impact whatsoever on dolphin, it continues to have single-click opening but does not automatically select icons on mouse hover no matter what my settings tell it.  This has been the case since the very beginning.  I have made considerable changes to the file associations, is there any way one of those could be affecting dolphin?  I have played around with the folder inode settings and the overall inode settings since the problem started but neither seem to have any impact.  Also, I accidentally altered the settings for the dolphin item in file associations, where you click "edit" when a given item is selected.  This has caused some minor changes to dolphin when viewed externally.  For instance it is still Dolphin/KDE4 even in KDE4, while all other KDE4 applications display * instead of */KDE4 in KDE4 (this appears to be the suse convention).  I don't see how this could cause the above problem but these are all the potential issues I can think of.  There are not that many dolphin settings that I can find that I might have screwed up.  So I've had no luck in figuring out how to reproduce the bug on other systems I'm afraid.
Comment 6 Peter Penz 2008-01-20 19:36:20 UTC
I've set David Faure on CC, maybe he has a hint about the root cause of your problem...
Comment 7 Shinobu Maehara 2008-01-23 14:34:53 UTC
Running on Windows, I have the exact same issue: left click and right click behave as if you doubleclick. And right click shows a contexmenu, but that disappears as soon as the file open dialog pops up.
Comment 8 Shinobu Maehara 2008-01-24 13:44:14 UTC
It also happens when using the back and forward buttons on the mouse.
Comment 9 Todd 2008-01-25 03:23:49 UTC
It works with the back and forth buttons on the mouse on one of my computers, but doesn't work with the back and forth buttons on the mouse on my other computer.  I think this may depends on xorg.conf at least in linux
Comment 10 Alan Prescott 2008-01-25 09:43:37 UTC
Ver 1.01, KDE 4.00.00 release 7.1 OpenSUSE 10.3
RMB does not launch if the icon is *already* selected.
Comment 11 FiNeX 2008-01-26 09:53:32 UTC
*** Bug 156546 has been marked as a duplicate of this bug. ***
Comment 12 Todd 2008-01-26 22:34:54 UTC
Whether it is selected or not makes no difference for me.
Comment 13 Ken Love 2008-02-01 21:11:09 UTC
I'm seeing the same behavior under Dolphin ver.1.0 using KDE 1.00.00 (KDE 4.0) Kubuntu 7.10.

When I right-click any file or folder the default action is executed along with the context pop-up.
Comment 14 Todd 2008-02-13 19:54:56 UTC
Renaming (or probably deleting) the .kde4 directory fixed the problem on both of my computers.  However, this obviously erased all of my settings.  I have not finished putting my settings how they were, but so far the problem has not reoccurred.  I will let you know if it does.
Comment 15 Patrick ALLAERT 2008-02-19 12:58:24 UTC
I have the same error using kde 4.0.1 on Gentoo.

I am at your disposal to provide needed .kde4/ files, just ask which one you need.
Comment 16 Todd 2008-02-21 16:59:39 UTC
A recent opensuse update has caused the problem to re-emerge on one of my computers (I have not updated the other since the problem started on this one).  I think the update in question is to 4.0.1-18.1
Comment 17 Markus Haag 2008-02-29 20:57:11 UTC
same problem here. using latest kde 4.0.64 snapshot for opensuse 10.3
Comment 18 David 2008-03-20 01:12:31 UTC
I can confirm this bug using KDE's SVN!
It happens since at least a week, for me it was working ok while using SVN in KDE 4.0.1 release times
Comment 19 CJ Fisher 2008-03-27 19:54:29 UTC
Created attachment 24079 [details]
Dolphin crash output
Comment 20 CJ Fisher 2008-03-27 20:00:03 UTC
Confirmed on KDE 4.0.2 installed with the 64-bit Kubuntu Hardy beta.

On my machine, the behavior is sporadic.  Using icons mode instead of details mode seems to prevent it sometimes.  Selecting the icon using arrow keys before right-clicking sometimes prevents it.  I even seems like certain directories also seem more prone to experience the bug than others,.

The right-click bug also frequently causes a crash for me (see above output?) which also happens sporadically.  Just now, the crash happened four times in a row when I tried to exit the context menu (whether by right-clicking or by pressing escape) and now I can't duplicate it anymore.
Comment 21 David Faure 2008-03-27 20:19:47 UTC
Too bad the backtrace is useless. All it says is that Qt was handling an event.
Comment 22 Todd 2008-03-28 21:55:11 UTC
I have been able to isolate the problem, at least to me, to the config file:

.kde4/share/config/kdeglobals

The setting that causes the problem is:

EffectAnimateMenu=true

If that line is absent, or set to "false", then the right-click does not open files.  If the line is present and set to "true", then right-clicking does open the file.  An additional setting in the same file:

EffectsEnabled=true

If this line is absent, or set to "false", then the problem also does not occur.  I am pretty sure turning off this setting also, by extension, turns off the EffectAnimateMenu setting.

Further, I have bug Bug 155444: dolphin crashes while dragging/dropping files.  Removing this setting fixes this bug as well.

So I think everyone who has the problem should try changing that one setting in their config file to see if it fixes the problem or if I am just a fluke.  Either way I hope this helps solve the problem.
Comment 23 Todd 2008-03-28 22:04:47 UTC
I have tried loading System Settings, going to Appearance -> Style -> Effects Tab.  There, setting the "Menu Effect" dropdown to either "Animate" or "Fade" triggers the problem.  Setting it to "Disable" fixes the problem.  I cannot use "make translucent" because it says oxygen does not support it, so I could not test that.  So try changing the settings first before messing with the config file. 
Comment 24 Thibaut Cousin 2008-03-28 22:33:54 UTC
Thank you for your suggestion, I'll try it as soon as possible. :-)

On the other hand, if a global setting triggers a bug in Dolphin only, it probably means that there actually is a bug in Dolphin... I hope that this will help fixing it.
Comment 25 Peter Penz 2008-03-29 07:07:42 UTC
> The setting that causes the problem is:
> EffectAnimateMenu=true
[...]
> EffectsEnabled=true
> If this line is absent, or set to "false", then the
> problem also does not occur. 

Thanks Todd for the hint! I just tried to enable those settings (KDE 4.0.x (SUSE) and on trunk), but still cannot reproduce this issue. Is this problem fixed for other subscribers of this bug?
Comment 26 Todd 2008-03-29 15:47:14 UTC
I've been unable to reproduce it on my other computer, so this doesn't seem to be a consistent problem.  I can say for certain that it is a problem on my other computer, though.  The computer that has the problem has an intel integrated graphics chip while the computer that doesn't has nvidia.  The computer that doesn't is also a laptop with a slightly newer intel chipset, but both computer have intel chipsets that are pretty new.  Otherwise there are no major differences I can think of.  Hope that helps.
Comment 27 Todd 2008-03-29 17:10:42 UTC
Scratch that.  I restarted my second computer with the setting in effect and now it is having the problem as well.  Turning the setting off fixes the problem, and then turning it on again triggers it again.  So I had to restart the computer with the setting on (I also had all the other animation on as well) before the effect would begin.  Once I had done that one initial restart then turning it on and off triggered and removed the problem without even closing dolphin, not to mention restarting the computer again.  So I am able to reproduce the bug in both my computers, and after the restart dolphin responds to changes in the setting immediately.
Comment 28 Thibaut Cousin 2008-03-29 17:13:08 UTC
Unfortunately, the two computers I have (both have the problem) work with an Nvidia video card. So it's probably not a driver problem...
Comment 29 Todd 2008-03-29 19:16:22 UTC
Yeah, I was able to reproduce it on my nvidia computer.  Have you tried changing the setting to see if that fixes it for you?
Comment 30 Thibaut Cousin 2008-03-30 01:30:17 UTC
I'm not at home at the moment, so I'll be able to test this only in a day or two. I'll keep you posted. Thanks for the hint, anyway.
Comment 31 Martin Fitzpatrick 2008-04-04 17:32:02 UTC
Confirmed on 4.0.3/Kubuntu with Intel chipset. I have desktop setup for single-click to launch applications (System Settings>>Keyboard & Mouse), perhaps this is the reason some are unable to duplicate?
Comment 32 Todd 2008-04-06 01:54:51 UTC
For me at least single-click mode does not seem to influence dolphin in any way, including triggering or fixing the problem.
Comment 33 Erwan M 2008-04-06 14:36:41 UTC
I had the same problem on a Gentoo Linux with KDE 4.0.1 and still have it with 4.0.3 end every dependant package updated. I have a nvidia graphic card, and disabling the menu animation fixed it.
Comment 34 Peter Penz 2008-04-06 20:26:14 UTC
*** Bug 160480 has been marked as a duplicate of this bug. ***
Comment 35 Todd 2008-04-07 19:31:58 UTC
Glad to see the menu effect can trigger it for at least one other person.  For me things are still the same in the Opensuse KDE 4.1 development branch.
Comment 36 Peter Penz 2008-04-07 21:11:59 UTC
I've changed this issue to NEW, although I still could not reproduce it. But with the useful input here I'll play around until I get a clue about the real root of the issue. If somebody has additional input which is not mentioned here I'd be glad if you could put this information to this report.
Comment 37 Peter Penz 2008-04-08 21:08:57 UTC
SVN commit 794872 by ppenz:

Bypassed a Qt-issue where enabling the menu-animation for QApplication emits a clicked() signal during the context menu is open. I got no bug-number from the Trolltech tasktracker yet, I'll update the number xxxxxx by the real number as soon as I received the bug-number.

BUG: 155574

 M  +5 -1      dolphinview.cpp  
 M  +1 -0      dolphinview.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=794872
Comment 38 Peter Penz 2008-04-08 21:15:24 UTC
SVN commit 794874 by ppenz:

Backport of SVN commit 794872:

Bypassed a Qt-issue where enabling the menu-animation for QApplication emits a clicked() signal during the context menu is open. I got no bug-number from the Trolltech tasktracker yet, I'll update the number xxxxxx by the real number as soon as I received the bug-number.

CCBUG: 155574 

 M  +5 -1      dolphinview.cpp  
 M  +1 -0      dolphinview.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=794874
Comment 39 Peter Penz 2008-04-08 21:19:45 UTC
To all subscribers of this bug: the issue is fixed on trunk and for the next bugfix release (KDE 4.0.4). Until then please just do the following:
- Go into System Settings -> Appearance -> Style -> Effects
- Uncheck 'Enable GUI effects'
- log out from KDE and log in again

The root of the issue is a behavioral difference in Qt when enabling menu animations. I've submitted a bugreport but I'm not sure if TT clarifies this as bug.
Comment 40 Piotr Pełzowski 2008-07-21 22:52:17 UTC
I have the same problem with version 1.0.99 (KDE 4.0.83 (KDE 4.1 Beta2) on Windows platform. Clicking with right mouse button on Windows platform above folder icon opens this folder (instead of showing context menu) and pops up another menu.

Should I submit another bug for Windows platform only or can this bug be reassigned to win32 devs?
Comment 41 Peter Penz 2008-07-22 08:01:05 UTC
@Piotr: It would be great if you could submit a separate bug for the Windows platform, as I think this has a little bit different root cause. Thanks!