Bypassed a Qt-issue where enabling the menu-animation for QApplication emits a clicked() signal during the context menu is open. I got no bug-number from the Trolltech tasktracker yet, I'll update the number xxxxxx by the real number as soon as I received the bug-number.

BUG: 155574

svn path=/trunk/KDE/kdebase/apps/; revision=794872